tests/paczka1/small_fuzzy/22645904.err
Error in line 3: DDF A201 91,00
Error in line 4: DDF A201 180,2
Error in line 14: ctNHO7N S2Y0 8,5
